--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,29 @@
-version: '3.8'
- 
+version: "3"
 services:
-    ser2net:
+    nginx:
+        image: nginx
         restart: unless-stopped
-        build: /opt/docker/ser2net
-         
         ports:
-            - "2000:2000"
-       
+           - "80:80"
         volumes:
-            - ./ser2net.yaml:/etc/ser2net.yaml:rw
-         
+            - ./config/nginx.conf:/etc/nginx/nginx.conf
+            - ./logs:/usr/share/nginx/html:ro
+        environment:
+            - TZ=America/New_York
+            #   - TZ=America/Los_Angeles
+    ser2net:
+        build: build_ser2net
+        restart: unless-stopped
+        ports:
+            - "2000-2050:2000-2050"
+            - "3000:3000"
+        volumes:
+            - ./config/ser2net.conf:/etc/ser2net.conf:ro
+            - ./config/z21_persistent-local.rules:/etc/udev/rules.d/z21_persistent-local.rules:ro
+            - ./logs:/logs
+        environment:
+            - TZ=America/New_York
+            #   - TZ=America/Los_Angeles
         devices:
-            # Configure udev on the host and pass device here
             - /dev/usb1p0
- 
-        tty: true
- 
-volumes:
-    data:
+            - /dev/usb1p1 
